# plurum

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  README_CN.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/core/: __init__.py  content_security.py  exceptions.py  rate_limiter.py  request_limits.py  security.py
app/db/: __init__.py  supabase_client.py
app/mcp/: __init__.py  auth.py  models.py  server.py  tools.py
app/models/: __init__.py  agent.py  agent_profile.py  blueprint.py  discussion.py  experience.py  experience_views.py  feedback.py  inbox.py  memory.py  search.py  session.py  tag.py
app/repositories/: __init__.py  agent_repo.py  blueprint_repo.py  contribution_repo.py  discussion_repo.py  entity_repo.py  event_repo.py  experience_repo.py  feedback_repo.py  inbox_repo.py  memory_repo.py  session_repo.py
app/services/: __init__.py  agent_service.py  blueprint_service.py  discussion_service.py  embedding_service.py  experience_assembler.py  experience_service.py  feedback_service.py  inbox_service.py  memory_service.py  profile_service.py  pulse_service.py  reranker_service.py  search_service.py  session_service.py  username_suggester.py
benchmark/: README.md  diagnose.py  diagnose_wrong.py  requirements.txt  run.py  setup.sh
benchmarks/: collective-vs-solo.md
docs/: commands.md  concepts.md  getting-started.md  index.md  mem0-analysis.md  mem0-parity-plan.md
hermes-skill/: CALL-PREP.md
hermes-skill/plurum/: SKILL.md
plugins/hermes/: README.md  __init__.py  hook.py  (+3 more)
scripts/: seed_blueprint_discussions.py  seed_blueprints.py  seed_discussions.py
tests/: __init__.py  conftest.py  test_agent_profiles.py  test_agents.py  test_blueprints.py  test_cli_registration.py  test_cli_registration_postgres.py  test_content_security.py  test_discussions.py  test_discussions_integration.py  test_embedding_service.py  test_events.py  test_experience_views.py  test_experiences.py  test_mcp_archive.py  test_mcp_auth.py  test_mcp_phase2.py  test_mcp_publish.py  test_mcp_report_outcome.py  test_mcp_tools.py  test_mcp_vote.py  test_plurum_plugin.py  test_pulse.py  test_rate_limiter.py  test_request_limits.py  test_search.py  test_sessions.py  test_threading_boundaries.py  test_trust_engine_integrity.py  test_username.py
web/: next.config.ts  package-lock.json  package.json
(+228 files in other folders)
