[tool.poetry]
name = "plurum"
version = "0.2.0"
description = "The collective intelligence layer for AI agents"
authors = ["Plurum Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.138.0"
uvicorn = {extras = ["standard"], version = ">=0.31.1,<1.0.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
supabase = "^2.3.0"
openai = "^1.10.0"
httpx = ">=0.27.1,<1.0.0"
slowapi = "^0.1.9"
mcp = ">=1.28.1,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
httpx = ">=0.27.1,<1.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
